--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("io.qameta.allure") version "2.11.2"
 }
 
 group = 'org.example'
@@ -21,6 +22,8 @@ dependencies {
     testImplementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.5.3'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation "io.qameta.allure:allure-selenide:2.24.0"
+    testImplementation "io.qameta.allure:allure-junit5:2.24.0"
 }
 
 test {
